# BARACHO-RL

./: LICENSE  README.md  pyproject.toml
baracho_rl/: __init__.py
baracho_rl/agents/: random_agent.py  rule_agent.py
baracho_rl/algos/: grpo.py  grpo_cluster.py  ppo.py  sac.py
baracho_rl/cli/: config_loader.py  main.py
baracho_rl/core/: base.py  metrics.py  replay.py  trainer.py
baracho_rl/envs/: cash_management.py  compose.py  dynamic_pricing.py  hiring_capacity.py  registry.py
baracho_rl/hrl/: options.py
baracho_rl/refiner/: refiner.py
baracho_rl/sim/: simulator.py
configs/: compose_pricing_hiring_cash.yaml  pricing24.yaml
examples/: compose_demo.py  pricing_quickstart.py
tests/: test_smoke.py
